--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.0</version>
-
+            <version>3.11</version>
         </dependency>
 
         <dependency>
@@ -68,6 +67,30 @@
                     </dependency>
                 </dependencies>
             </plugin>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <archive>
+                                <manifest>
+                                    <addClasspath>true</addClasspath>
+                                    <mainClass>com.navi.rental.Application</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+
+                    </plugin>
+
         </plugins>
     </build>
 
